<resources>
    <string name="app_name">MoviesManager</string>
    <string name="nome">Nome</string>
    <string name="ano_de_lancamento">Ano de lançamento</string>
    <string name="produtora">Produtora</string>
    <string name="duracao">Duração</string>
    <string name="nota">Nota:</string>
    <string name="salvar">Salvar</string>
    <string name="categoria">Selecione uma categoria:</string>
    <string name="filme_assistido">Filme assistido</string>
    <string name="format_nome">Nome: %s</string>
    <string name="format_genero">Gênero: %s</string>
    <string name="format_ano">Ano: %s</string>
    <string name="format_produtora">Produtora: %s</string>
    <string name="format_duracao">Duração: %d min</string>
    <string name="format_nota">Nota: %s</string>
    <string name="editar_filme">Editar Filme</string>
    <string name="remover_filme">Remover Filme</string>
    <string name="nota_button">Nota</string>
    <string name="ordenar">Ordenar por:</string>
    <string-array name="movie_genres">
        <item>Romance</item>
        <item>Comédia</item>
        <item>Terror</item>
        <item>Drama</item>
        <item>Aventura</item>
    </string-array>
</resources>